[CHORE] modify some calendar code

--- a/CustomCalendar/app/src/main/res/layout/layout_calendar.xml
+++ b/CustomCalendar/app/src/main/res/layout/layout_calendar.xml
@@ -129,6 +129,7 @@
             app:layout_constraintTop_toBottomOf="@+id/line"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="7"
+            tools:itemCount="31"
             tools:listitem="@layout/item_date" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
