--- a/CustomCalendar/app/src/main/res/layout/item_date.xml
+++ b/CustomCalendar/app/src/main/res/layout/item_date.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
